<resources>
    <string name="app_name">riceApp1</string>
    <string name="title_activity_login" translatable="false">INICIO SESION</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_register" translatable="false">Register</string>
    <string name="action_sign_in" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="all">TODO</string>
</resources>